--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Mikhail Porotkin",
   "repository": {
     "type": "git",
-    "url": "https://github.com/porotkin/vite-plugin-react-kotlinjs.git"
+    "url": "git+https://github.com/porotkin/vite-plugin-react-kotlinjs.git"
   },
   "keywords": [
     "vite-plugin-react-kotlinjs",
