--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "postinstall": "node copyRefreshRuntime.js"
   },
   "dependencies": {
+    "@babel/core": "^7.28.4",
     "@rolldown/pluginutils": "1.0.0-beta.41",
     "react-refresh": "^0.17.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "5.0.4"
+    "@vitejs/plugin-react": "^5.0.4"
   }
 }
